# sync-paperpile-notion

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sync_papers.sh
.github/workflows/: sync-paperpile-notion.yml
src/link_paperpile_notion/: __init__.py  cleanup.py  core.py  drive_client.py  notion_blocks.py  notion_client.py
