[project]
name = "link-paperpile-notion"
version = "0.1.0"
description = "Sync academic papers from Paperpile to Notion with full PDF content embedding and extraction"
authors = [
    { name = "Yamato Miyatake" }
]
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "bibtexparser>=1.4.3",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "marker-pdf>=1.8.4",
    "pymupdf>=1.26.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/link_paperpile_notion"]
